# revision2023-4k-intro-rust

./: Cargo.toml  LICENSE  README.md  build.rs  build.sh
src/: gl_wrapper.rs  main.rs
src/bindings/: Xlib_constants.rs  mod.rs
